--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.78.2",
+    "@react-three/drei": "^9.79.3",
     "@react-three/fiber": "^8.13.5",
     "@react-three/rapier": "^1.1.1",
     "@types/three": "^0.154.0",
+    "classnames": "^2.3.2",
     "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
