--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joystick-component": "^6.2.1",
     "three": "^0.154.0",
     "zustand": "^4.3.9"
   },
